fixed layout problem

--- a/src/index.css
+++ b/src/index.css
@@ -11,13 +11,12 @@
 }
 
 body{
-  @apply w-screen h-screen ;
+  @apply w-screen h-screen max-w-full;
 }
 
 #root{
-  @apply flex flex-col min-h-screen;
+  @apply flex flex-col min-h-screen h-1;
 }
-
 
 .nav-li{
   @apply w-1/3 h-full flex justify-center items-center show-drop-down-menu relative
